// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`< Picklist /> example of list settings overriding item-level settings 1`] = `
<ul
  className="xui-picklist xui-picklist-layout xui-picklist-medium"
  onChange={[Function]}
>
  <li
    aria-selected={null}
    className="xui-pickitem xui-pickitem-text-truncated xui-pickitem-medium"
    id="pi1"
  >
    <button
      className="xui-pickitem--body"
      rel={null}
      type="button"
    >
      <span
        className="xui-pickitem--text xui-pickitem-text-truncated"
      >
        <span
          className="xui-pickitem-text-truncated"
        >
          Item content
        </span>
      </span>
    </button>
  </li>
</ul>
`;

exports[`< Picklist /> example taking settings from first child and giving to all 1`] = `
<ul
  className="xui-picklist xui-picklist-layout xui-picklist-medium"
  onChange={[Function]}
>
  <li
    aria-selected={false}
    className="xui-pickitem xui-pickitem-multiselect xui-pickitem-medium"
    id="pi1"
  >
    <div
      className="xui-pickitem--body"
      role="button"
      tabIndex={0}
    >
      <div
        className="xui-pickitem-multiselect--checkbox xui-styledcheckboxradiowrapper xui-styledcheckboxradio-small"
      >
        <label
          className="xui-styledcheckboxradio"
          onClick={[Function]}
        >
          <input
            aria-labelledby="xui-testPickitemCheckboxId"
            checked={false}
            className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-small xui-pickitem--input"
            disabled={false}
            onChange={[Function]}
            required={false}
            tabIndex={-1}
            type="checkbox"
          />
          <div
            className="xui-styledcheckboxradio--checkbox xui-pickitem--input xui-styledcheckboxradio--checkbox-small"
            onAnimationEnd={[Function]}
          >
            <div
              className="xui-touchtarget"
            />
          </div>
          <span
            className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-small xui-pickitem--text xui-pickitem-multiselect--label"
            id="xui-testPickitemCheckboxId"
          >
            <span
              className=""
            >
              Item content
            </span>
          </span>
        </label>
      </div>
    </div>
  </li>
  <li
    aria-selected={false}
    className="xui-pickitem xui-pickitem-multiselect xui-pickitem-medium"
    id="pi2"
  >
    <div
      className="xui-pickitem--body"
      role="button"
      tabIndex={0}
    >
      <div
        className="xui-pickitem-multiselect--checkbox xui-styledcheckboxradiowrapper xui-styledcheckboxradio-small"
      >
        <label
          className="xui-styledcheckboxradio"
          onClick={[Function]}
        >
          <input
            aria-labelledby="xui-testPickitemCheckboxId"
            checked={false}
            className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-small xui-pickitem--input"
            disabled={false}
            onChange={[Function]}
            required={false}
            tabIndex={-1}
            type="checkbox"
          />
          <div
            className="xui-styledcheckboxradio--checkbox xui-pickitem--input xui-styledcheckboxradio--checkbox-small"
            onAnimationEnd={[Function]}
          >
            <div
              className="xui-touchtarget"
            />
          </div>
          <span
            className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-small xui-pickitem--text xui-pickitem-multiselect--label"
            id="xui-testPickitemCheckboxId"
          >
            <span
              className=""
            >
              Item two
            </span>
          </span>
        </label>
      </div>
    </div>
  </li>
</ul>
`;

exports[`< Picklist /> example with most compatible options 1`] = `
<ul
  className="xui-picklist xui-picklist-medium custom-picklist-class xui-picklist-horizontal"
  data-automationid="picklist-example"
  id="picklistId"
  onChange={[Function]}
  role="presentation"
>
  <li
    aria-selected={null}
    className="xui-pickitem xui-pickitem-text-truncated xui-pickitem-is-horizontal xui-pickitem-medium"
    id="pi1"
  >
    <button
      className="xui-pickitem--body"
      rel={null}
      type="button"
    >
      <span
        className="xui-pickitem--text xui-pickitem-text-truncated"
      >
        <span
          className="xui-pickitem-text-truncated"
        >
          Item content
        </span>
      </span>
    </button>
  </li>
</ul>
`;

exports[`< Picklist /> renders most basic example 1`] = `
<ul
  className="xui-picklist xui-picklist-layout xui-picklist-medium"
  onChange={[Function]}
>
  <li
    aria-selected={null}
    className="xui-pickitem xui-pickitem-medium"
    id="pi1"
  >
    <button
      className="xui-pickitem--body"
      rel={null}
      type="button"
    >
      <span
        className="xui-pickitem--text"
      >
        Item content
      </span>
    </button>
  </li>
</ul>
`;
